Додає мобільну версію героя
Та частково додає ще секцію offering

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,5 +2,8 @@ $text-color: #2C2C2C;
 $primary-bg-color: #FEFEFE;
 $secondary-bg-color: #FFE550;
 
+$primary-accent-color: #BBF330;
+$secondary-accent-color: #FFE550;;
+
 $primary-button-bg-color: #BBF330;
 $secondary-button-bg-color: #FFE550;
