--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,26 +17,29 @@
 }
 
 .menu-button__icon {
-    background-color: #f2f2f2;
-    border: none;
+    fill: $primary-accent-color;
+
     cursor: pointer;
+
+    &:hover, :focus {
+        fill: $secondary-accent-color;
+    }
 }
 
 .menu-container {
     position: absolute;
     top: 28px;
-    right: 0;
+    right: 2px;
     width: 0px;
-    background-color: #fff;
+    background-color: $primary-bg-color;
     border-radius: 30px 0px 30px 30px;
+    box-shadow: 0px 4px 24px rgba(105, 105, 105, 0.1);
 
     overflow: hidden;
     opacity: 0;
 
     transition: opacity 0.3s ease-in-out,
     width 0.3s ease-in-out;
-
-    border: 1px solid red;
 }
 
 .menu-container.open {
