--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,28 @@
-
 .container-hero {
-    height: 200px;
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+
+.hero__title {
+    font-size: 28px;
+    line-height: 1.18;
+
+    margin-bottom: 28px;
+}
+
+.hero__description {
+    font-size: 14px;
+    line-height: 20px;
+
+    margin-bottom: 28px;
+}
+
+.hero__button {
+    padding: 6px 18px;
+    background-color: $primary-button-bg-color;
+    border-radius: 30px;
+        
+    &:hover, :focus {
+        background-color: $secondary-button-bg-color;
+    }
 }
