--- a/sass/layout/_offering.scss
+++ b/sass/layout/_offering.scss
@@ -1,5 +1,5 @@
 .container-offering {
-    background-image: url('../../images/mobile-bg-image.jpg');
+    background-image: url('../images/mobile-bg-image.jpg');
     background-position-x: center;
 
     padding-top: 41px;
